fix width on small screens

--- a/src/app/index-switch/index-switch.component.scss
+++ b/src/app/index-switch/index-switch.component.scss
@@ -11,5 +11,4 @@
 
 .full-width {
 	width: 100%;
-	min-width: 1440px;
 }
