--- a/src/app/landing-header/landing-header.component.scss
+++ b/src/app/landing-header/landing-header.component.scss
@@ -7,7 +7,6 @@
 	padding-bottom: 32px;
 }
 .landing-header-container {
-	max-width: 1440px;
 	margin: auto;
 }
 .container {
